# jets

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
cryptids/: asgi.py  settings.py  urls.py  wsgi.py
