[tool.poetry]
name = "dj"
version = "0.1.0"
description = "My first django app"
authors = ["Neil Munro <neilmunro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
pillow = "^8.0.1"
django-taggit = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
