[tool.poetry]
name = "dj"
version = "0.1.0"
description = "My first django app"
authors = ["Neil Munro <neilmunro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
pillow = "^8.0.1"
django-taggit = "^1.3.0"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
